<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginFragment">

        <LinearLayout
            android:id="@+id/form_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/margin"
            android:fitsSystemWindows="true">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_size"
                android:hint="@string/plate"
                style="@style/EditTextInputLayoutStyle"
                android:layout_marginBottom="@dimen/input_margin_bottom">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/plate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    style="@style/InputTextFont"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_button_size"
                android:text="@string/search"
                style="@style/ButtonStyle"/>

        </LinearLayout>

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


        <LinearLayout
            android:id="@+id/route"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/form_view"
            android:layout_margin="@dimen/margin"
            android:padding="@dimen/margin"
            android:background="@color/input"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:textSize="@dimen/title"
                android:text="@string/route"
                android:textColor="@color/title"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/name"
                android:textColor="@color/caption"/>

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"

                android:layout_marginBottom="@dimen/input_margin_bottom"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/address"
                android:textColor="@color/caption"/>

            <TextView
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginBottom="@dimen/input_margin_bottom"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/phone"
                android:textColor="@color/caption"/>

            <TextView
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginBottom="@dimen/input_margin_bottom"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/time"
                android:textColor="@color/caption"/>

            <TextView
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:layout_marginBottom="@dimen/input_margin_bottom"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>